--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ markdown>=3.3.0
 # GitHub integration
 PyGithub>=1.55
 
+# Data visualization (optional)
+matplotlib>=3.4.0
+
 # Testing
 pytest>=6.2.0
 pytest-cov>=2.12.0
